--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,54 @@
 cachetools==3.1.1
+cairocffi==1.1.0
+CairoSVG==2.4.1
 certifi==2019.6.16
+cffi==1.12.3
 chaostoolkit==1.3.0
 chaostoolkit-kubernetes==0.21.0
 chaostoolkit-lib==1.6.0
+chaostoolkit-reporting==0.13.0
 chardet==3.0.4
 Click==7.0
 click-plugins==1.1.1
+cssselect2==0.2.2
+cycler==0.10.0
 dateparser==0.7.1
+defusedxml==0.6.0
 google-auth==1.6.3
+humanize==0.5.1
 idna==2.8
+Jinja2==2.10.1
+kiwisolver==1.1.0
 kubernetes==10.0.1
 logzero==1.5.0
+MarkupSafe==1.1.1
+matplotlib==3.1.1
+maya==0.6.1
+natural==0.2.0
+numpy==1.17.2
 oauthlib==3.1.0
+pendulum==2.0.5
+Pillow==6.1.0
 pyasn1==0.4.7
 pyasn1-modules==0.2.6
+pycparser==2.19
+pygal==2.4.0
+pypandoc==1.4
+pyparsing==2.4.2
 python-dateutil==2.8.0
 python-json-logger==0.1.11
 pytz==2019.2
+pytzdata==2019.2
 PyYAML==5.1.2
 regex==2019.8.19
 requests==2.22.0
 requests-oauthlib==1.2.0
 rsa==4.0
+semver==2.8.1
 six==1.12.0
+snaptime==0.2.4
+tinycss2==1.0.2
 tzlocal==2.0.0
 urllib3==1.25.3
+webencodings==0.5.1
 websocket-client==0.56.0
